# automixer

./: .env.example  .gitignore  README.md  config.json.example  config.yaml.example  main.py  main2.py  main_app.py  metric.py  obsclient.py  ocr.py  pyproject.toml  recorder.py  sobel.py  transcriber.py  utils.py
clients/: mixer_client.py  obs_adapter.py
core/: event_bus.py  events.py
services/: audio_service.py  camera_service.py  change_detector.py  rouge_service.py  scene_manager.py  transcription_service.py  vision_service.py
src/automixer/: __init__.py  __main__.py  builder.py  config.py  mixer.py  tui.py
src/automixer/core/: __init__.py  bus.py  events.py
src/automixer/interactors/: __init__.py  base.py  enum.py  obs.py  utils.py
src/automixer/resources/tcss/: automixer.tcss
src/automixer/services/: __init__.py  base.py  camera.py  collection.py  interaction.py  mic.py  mixing.py  notification.py  ocr.py  slide.py  transcription.py
src/automixer/utils/: audio.py  file.py  text.py  vision.py
