[project]
name = "automixer"
version = "0.1.0"
description = "Video mixer automation for Reformed Exodus Community streamings"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Nathanael Tjandra", email = "nath.tjand@gmail.com" },
]
dependencies = [
  "bubus",
  "easyocr",
  "numpy",
  "openai",
  "opencv-python",
  "pydantic",
  "python-dotenv",
  "scipy",
  "sounddevice",
  "textual",
]

[project.scripts]
automixer = "automixer.__main__:main"

[project.optional-dependencies]
obs = [
  "obs-websocket-py",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
automixer = ["resources/**/*"]
