[project]
name = "automixer"
version = "1.0.0"
description = "Multimedia automation for video mixing sermon/presentation (switching between camera and slide)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Nathanael Tjandra", email = "nath.tjand@gmail.com" },
]
dependencies = [
  "bubus",
  "easyocr",
  "numpy",
  "openai",
  "opencv-python",
  "pydantic",
  "python-dotenv",
  "pyyaml",
  "scipy",
  "sounddevice",
  "textual",
]

[project.scripts]
automixer = "automixer.__main__:main"

[project.optional-dependencies]
obs = [
  "obs-websocket-py",
]
mqtt = [
  "paho-mqtt",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
automixer = ["resources/**/*"]
